fixed row div alignment

--- a/css/pages/_homepage.scss
+++ b/css/pages/_homepage.scss
@@ -12,6 +12,7 @@ main section:first-child {
 .row {
     display: flex;
     flex-direction: column-reverse;
+    justify-content: center;
     @media screen and (min-width:750px) {
         flex-direction: row;
     }
