--- a/css/style.css
+++ b/css/style.css
@@ -774,6 +774,9 @@ main section:first-child {
   -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (min-width: 750px) {
